--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>汉字乱序生成器</title>
-    
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_PUBLISHER_ID"
-     crossorigin="anonymous"></script>
 
     <style>
         :root {
@@ -239,7 +236,7 @@
 			line-height: 1.8;
 			color: #4b5563;
 			margin-bottom: 1rem;
-			text-align: justify; /* 两端对齐，看起来更专业 */
+			text-align: justify; 
 		}
 
 		.article-block ul {
@@ -414,18 +411,6 @@
     </div>
 </header>
 
-<div class="ad-wrapper">
-    <ins class="adsbygoogle"
-         style="display:block; width: 100%;"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="1234567890"
-         data-ad-format="horizontal"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-</div>
-
 <main>
     <div class="card editor-container">
         <div class="card-header">
@@ -479,18 +464,6 @@
     </div>
 </main>
 
-<div class="ad-wrapper">
-    <ins class="adsbygoogle"
-         style="display:block; width: 100%;"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="0987654321"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-</div>
-
 <section class="intro-section">
     <div class="intro-content">
         <div class="article-block">
@@ -507,6 +480,11 @@
 			</p>
 			<p>
 				只要词首和词尾的相对位置变化不大，或者核心词意保持完整，人脑会自动修正语序错误，从而实现流畅阅读。
+            </p>
+            <p style="margin-top: 1rem;">
+                <a href="guide.html" style="color: var(--primary); font-weight: 600; text-decoration: none;">
+                    👉 详细了解“汉字序位偏差”背后的认知心理学原理
+                </a>
             </div>
 
         <div class="article-block">
@@ -541,6 +519,11 @@
 <footer>
     <div class="footer-content" style="font-size: 0.85rem; color: var(--text-sub);">
         <p>&copy; Chinese Scrambler · 汉字乱序生成器 · Made by WelFrog</p>
+        <p style="margin-top: 10px;">
+            <a href="privacy.html" style="color: var(--text-sub); text-decoration: none; margin: 0 10px;">隐私政策</a> | 
+            <a href="tos.html" style="color: var(--text-sub); text-decoration: none; margin: 0 10px;">服务条款</a> |
+            <a href="https://github.com/WelFrog/Chinese-Scrambler/issues" style="color: var(--text-sub); text-decoration: none; margin: 0 10px;">问题反馈</a>
+        </p>
     </div>
 </footer>
 
@@ -616,21 +599,26 @@
         });
 
         const segments = Array.from(segmenter.segment(sentence));
-        let wordIndices = [];
-        let wordObjects = segments.map((seg) => {
-            const isInsideWhitelist = protectedIntervals.some(interval => (seg.index >= interval.start && seg.index < interval.end));
-            const hasBlacklistChar = Array.from(seg.segment).some(char => BLACKLIST_CHARS.has(char));
-            return {
-                text: seg.segment,
-                isWordLike: seg.isWordLike,
-                isProtected: isInsideWhitelist || hasBlacklistChar,
-                shouldScramble: false
-            };
-        });
-
-        wordObjects.forEach((obj, idx) => {
-            if (obj.isWordLike && !obj.isProtected && obj.text.length >= 1) wordIndices.push(idx);
-        });
+	let wordIndices = [];
+	let wordObjects = segments.map((seg) => {
+	    const isInsideWhitelist = protectedIntervals.some(interval => (seg.index >= interval.start && seg.index < interval.end));
+	    const hasBlacklistChar = Array.from(seg.segment).some(char => BLACKLIST_CHARS.has(char));
+	    
+	    const isProcessable = /[\u4e00-\u9fa5a-zA-Z0-9]/.test(seg.segment);
+	
+	    return {
+	        text: seg.segment,
+	        isWordLike: seg.isWordLike || isProcessable, 
+	        isProtected: isInsideWhitelist || hasBlacklistChar,
+	        shouldScramble: false
+	    };
+	});
+	
+	wordObjects.forEach((obj, idx) => {
+	    if ((obj.isWordLike) && !obj.isProtected && obj.text.length > 1) {
+	        wordIndices.push(idx);
+	    }
+	});
 
         const targetCount = Math.ceil(wordIndices.length * rate);
         shuffleArray(wordIndices);
