--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             </p>
             <p style="margin-top: 1rem;">
                 <a href="guide.html" style="color: var(--primary); font-weight: 600; text-decoration: none;">
-                    👉 详细了解“汉字序位偏差”背后的认知心理学原理
+                    详细了解“汉字序位偏差”背后的认知心理学原理
                 </a>
             </div>
 
