--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <label class="field-label">处理结果</label>
                 <button class="btn-copy-action" id="copyBtn" onclick="copyResult()">复制</button>
             </div>
-            <div id="result" class="output-box">等待生成...</div>
+            <div id="result" class="output-box">请点击下方的“立刻生成”按钮...</div>
         </div>
     </div>
 
@@ -528,7 +528,6 @@
 </footer>
 
 <script>
-    // ... 原有的 JavaScript 代码，未做修改 ...
     const BLACKLIST_CHARS = new Set([
         '的', '了', '呢', '吧', '吗', '啊', '呀', '哇', '着', '过', '也', '还', '就', '都',
         '赵', '钱', '孙', '李', '周', '吴', '郑', '王', '冯', '陈', '褚', '卫', '蒋', '沈', '韩', '杨',
